--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,9 +1,9 @@
 /* header */
 .nav{
   padding-top: 40px;
-}
-.nav a:hover{
-  font-size: 20px;
+  a:hover{
+    font-size: 20px;
+  }
 }
 .banner{
   padding: 72px 0;
