--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,91 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
-
-/* self-css */
-
-*, *::before, *::after {
-  /* outline: 1px solid red; */
-  box-sizing: border-box;
-}
-body{
-  background-color: #000000;
-  font-family: 'Bruno Ace SC',cursive, sans-serif;
-  line-height: 1.5;
-  color: #FFFFFF;
-}
-
-a{
-  text-decoration: none;
-}
-
-img{
-  display: block;
-}
-h1{
-  font-size: 128px;
-  color: #00FFA3;
-  text-align: end;
-}
-h2{
-  font-size: 64px;
-  color: #000;
-}
-h3{
-  font-size: 20px;
-}
-.container{
-  width: 1296px;
-  margin: 0 auto;
-  
-}
-.d-flex{
-  display: flex;
-}
-.jc-space-between{
-  justify-content: space-between;
-}
-.ai-center{
-  align-items: center;
-}
-.font-style1{
-  color: #D1D1D1;
-}
-.font-style2{
-  font-size: 64px;
-  color: #FFFFFF;
-}
-.font-style3{
-  font-size: 24px;
-}
-.font-style4{
-  color: #000000;
-}
-.btn{
-  width: 185px;
-  border-radius: 32px;
-  padding: 12px 24px;
-  font-family: 'Bruno Ace SC',cursive, sans-serif;
-}
-.btn-white{
-  background-color: #fff;
-  color: #000000;
-  margin-left: auto;
-}
-.btn-black{
-  background-color: #000000;
-  color: #FFFFFF;
-  margin-top: 76px;
-}
-.mr-24px{
-  margin-right: 24px;
-}
-.mb-36px{
-  margin-bottom: 36px;
-}
-.py-160px{
-  padding: 160px 0;
-}
-
-
 /* intro */
 .intro{
   background-image: url(https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/background-img.png?raw=true);
@@ -109,12 +21,12 @@ h3{
 .aboutMe-card{
   width: 636px;
   flex-wrap: wrap;
-}
-.aboutMe-card li{
-  width: 306px;
-  padding: 16px;
-  margin-bottom: 24px;
-  border: 1px solid rgba(227, 227, 227, 1);
+  li{
+    width: 306px;
+    padding: 16px;
+    margin-bottom: 24px;
+    border: 1px solid rgba(227, 227, 227, 1);
+  }
 }
 .aboutMeText{
   width: 526px;
@@ -128,28 +40,29 @@ h3{
 .contact-icon{
   width: 526px;
   padding: 96px 0;
+  img{
+    width: 162px;
+    height: 162px;
+    object-fit: cover;
+    border-radius: 40px;
+    &:hover{
+      box-shadow: 0px 0px 16px 3px rgba(144, 148, 255, 0.9);
+      border-radius: 40px;
+    }
+  }
 }
-.contact-icon img{
-  width: 162px;
-  height: 162px;
-  object-fit: cover;
-  border-radius: 40px;
 
-}
-.contact-icon img:hover{
-  box-shadow: 0px 0px 16px 3px rgba(144, 148, 255, 0.9);
-  border-radius: 40px;
-}
 
 /* project */
 .project{
   background-color: #fff;
+  h2{
+    width: 746px;
+    margin-left: auto;
+    margin-bottom: 16px;
+  }
 }
-.project h2{
-  width: 746px;
-  margin-left: auto;
-  margin-bottom: 16px;
-}
+
 .project-contentBox{
   width: 856px;
   
