--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,16 +1,15 @@
 <div class="header">
     <div class="container">
         <ul class="nav d-flex jc-space-between">
-            <li><a href="#" class="font-style1">WILLIAM LEE</a></li>
-            <li><a href="#" class="font-style1">BASED IN TAIWAN</a></li>
-            <li><a href="#" class="font-style1">CURRENTLY FRONT END <br>ENGINEER AT HEXSCHOOL</a></li>
+            <li class="font-style1">WILLIAM LEE</li>
+            <li class="font-style1">BASED IN TAIWAN</li>
+            <li class="font-style1">CURRENTLY FRONT END <br>ENGINEER AT HEXSCHOOL</li>
             <li><a href="#" class="font-style1">CONTACT ME</a></li>
         </ul>
         <div class="banner d-flex jc-space-between">
             <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/people.png?raw=true" alt="個人照片1" class="header-img" style="width: 636px;height: 848px;">
             <div class="header-text">
-                <h2 class="font-style2">Hi</h2>
-                <h2 class="font-style2">I’m a front-end developer</h2>
+                <h2 class="font-style2">Hi<br>I’m a front-end developer</h2>
                 <h1>William</h1>
                 <a href="#" class="btn btn-white d-flex jc-space-between">contact me<img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/arrow_outward.png?raw=true" alt="聯絡我指向箭頭" style="width: 24px;height: 24px;" title="請聯絡我"></a>
             </div>
